--- a/account.html
+++ b/account.html
@@ -209,7 +209,7 @@
                                 </div>
                                 <div class="input__wrapper">
                                     <label for="height" class="label small__text darkgrey__text">Физическая активность</label>
-                                    <input type="number" id="height" class="input profile__input medium__text pointer" placeholder="Выбрать" readonly>
+                                    <input type="text" id="height" class="input profile__input medium__text pointer" placeholder="Выбрать" readonly>
                                     <svg class="input__button" width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M12.7524 16.0515L18.4024 10.3915C18.4962 10.2985 18.5706 10.1879 18.6213 10.066C18.6721 9.94417 18.6982 9.81347 18.6982 9.68146C18.6982 9.54944 18.6721 9.41874 18.6213 9.29688C18.5706 9.17502 18.4962 9.06442 18.4024 8.97146C18.2151 8.78521 17.9616 8.68066 17.6974 8.68066C17.4333 8.68066 17.1798 8.78521 16.9924 8.97146L11.9924 13.9215L7.04244 8.97146C6.85508 8.78521 6.60163 8.68066 6.33744 8.68066C6.07326 8.68066 5.81981 8.78521 5.63244 8.97146C5.53796 9.06407 5.46279 9.17452 5.41129 9.29639C5.35979 9.41827 5.33299 9.54915 5.33245 9.68146C5.33299 9.81376 5.35979 9.94465 5.41129 10.0665C5.46279 10.1884 5.53796 10.2988 5.63244 10.3915L11.2824 16.0515C11.3761 16.153 11.4897 16.234 11.6162 16.2894C11.7427 16.3448 11.8793 16.3734 12.0174 16.3734C12.1555 16.3734 12.2922 16.3448 12.4187 16.2894C12.5451 16.234 12.6588 16.153 12.7524 16.0515Z" fill="#242529"/>
                                     </svg>
@@ -224,7 +224,7 @@
                                 </div>
                                 <div class="input__wrapper">
                                     <label for="height" class="label small__text darkgrey__text">Цель</label>
-                                    <input type="number" id="height" class="input profile__input medium__text pointer" placeholder="Выбрать" readonly>
+                                    <input type="text" id="height" class="input profile__input medium__text pointer" placeholder="Выбрать" readonly>
                                     <svg class="input__button" width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M12.7524 16.0515L18.4024 10.3915C18.4962 10.2985 18.5706 10.1879 18.6213 10.066C18.6721 9.94417 18.6982 9.81347 18.6982 9.68146C18.6982 9.54944 18.6721 9.41874 18.6213 9.29688C18.5706 9.17502 18.4962 9.06442 18.4024 8.97146C18.2151 8.78521 17.9616 8.68066 17.6974 8.68066C17.4333 8.68066 17.1798 8.78521 16.9924 8.97146L11.9924 13.9215L7.04244 8.97146C6.85508 8.78521 6.60163 8.68066 6.33744 8.68066C6.07326 8.68066 5.81981 8.78521 5.63244 8.97146C5.53796 9.06407 5.46279 9.17452 5.41129 9.29639C5.35979 9.41827 5.33299 9.54915 5.33245 9.68146C5.33299 9.81376 5.35979 9.94465 5.41129 10.0665C5.46279 10.1884 5.53796 10.2988 5.63244 10.3915L11.2824 16.0515C11.3761 16.153 11.4897 16.234 11.6162 16.2894C11.7427 16.3448 11.8793 16.3734 12.0174 16.3734C12.1555 16.3734 12.2922 16.3448 12.4187 16.2894C12.5451 16.234 12.6588 16.153 12.7524 16.0515Z" fill="#242529"/>
                                     </svg>
