--- a/modal.html
+++ b/modal.html
@@ -75,7 +75,8 @@
                         </div>
                         <div class="input__wrapper">
                             <label for="phone" class="label small__text darkgrey__text">Введите количество бонусов</label>
-                            <input type="text" id="phone" class="input medium__text" placeholder="345 / 1000">
+                            <input type="text" id="phone" class="input medium__text" placeholder="345" maxlength="4">
+                            <span class="absolute-bonus medium__text">/ 1000</span>
                         </div>
                     </div>
                 </div>
