--- a/pages.html
+++ b/pages.html
@@ -21,15 +21,15 @@
 <body style="background-color: #FFFFFF;">
     <div style="display: flex; gap: 40px;">    
         <div style="display: flex; flex-direction: column; gap: 12px; margin: 12px 40px;">
-            <a href="/">Главная</a>
-            <a href="/about.html">О компании</a>
-            <a href="/account.html">Аккаунт</a>
-            <a href="/blog.html">Блог</a>
-            <a href="/calculator.html">Калькулятор</a>
-            <a href="/collaboration.html">Сотрудничество</a>
-            <a href="/delivery.html">Доставка</a>
-            <a href="/promo.html">Акции</a>
-            <a href="/modal.html">Все модальные окна</a>
+            <a href="/FoodPower/">Главная</a>
+            <a href="/FoodPower/about.html">О компании</a>
+            <a href="/FoodPower/account.html">Аккаунт</a>
+            <a href="/FoodPower/blog.html">Блог</a>
+            <a href="/FoodPower/calculator.html">Калькулятор</a>
+            <a href="/FoodPower/collaboration.html">Сотрудничество</a>
+            <a href="/FoodPower/delivery.html">Доставка</a>
+            <a href="/FoodPower/promo.html">Акции</a>
+            <a href="/FoodPower/modal.html">Все модальные окна</a>
         </div>    
     </div>
 
